@@ -13,6 +13,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -23,7 +24,7 @@ public class SecurityFilter {
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
     @Value("${cors.allowedOrigins}")
-    private String allowedOrigins;
+    private String[] allowedOrigins;
 
     public SecurityFilter(
             AuthenticationProvider authenticationProvider,
@@ -65,8 +66,7 @@ public class SecurityFilter {
         CorsConfiguration configuration = new CorsConfiguration();
 
 
-        String[] origins = allowedOrigins.split(",");
-        configuration.setAllowedOrigins(List.of(origins));
+        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
         configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
